--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "formik": "^2.2.9",
     "redux": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
