--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
